--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <a href="begin.html">To Begin page</a><br>
         <a href="contactMe.html">To contacts page</a><br>
-        <a href="#top" id="bot"><img src="assets\top_but_img-modified.png" alt="" height="25" width="25"></a>
+        <a href="#top" id="bot"><img src="assets\topbutimgmodified.png" alt="" height="25" width="25"></a>
        
     </body>
 
