--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <table cellspacing="25">
             <td>
-                <img src="myimg.png" alt="my img" height="200" width="200">
+                <img src="https://saravanakkumarta.github.io/portfolio/myimg.png" alt="my img" height="200" width="200">
                 <!--This tag is for lorem ipsum sites img<img src="https://picsum.photos/200" alt="loading img">-->
             </td>
             <td>
@@ -88,7 +88,7 @@
 
         <a href="begin.html">To Begin page</a><br>
         <a href="contactMe.html">To contacts page</a><br>
-        <a href="#top" id="bot"><img src="topbutimgmodified.png" alt="" height="25" width="25"></a>
+        <a href="#top" id="bot"><img src="https://saravanakkumarta.github.io/portfolio/topbutimgmodified.png" alt="" height="25" width="25"></a>
        
     </body>
 
